--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 ~$Zvýšenie produktivity na pracovisku s použitím prvkov gamifikácie.pptx
 ~$A1.pptx
+Zvýšenie produktivity na pracovisku s použitím prvkov gamifikácie.pptx
